--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<!-- Schema.org markup for Google+ -->
 	<meta itemprop="name" content="it's a(door)able">
-	<meta itemprop="description" content="a one-minute minigame.">
+	<meta itemprop="description" content="minigame.">
 	<meta itemprop="image" content="http://ncase.me/door/thumbnail.png">
 
 	<!-- Open Graph data -->
